--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -1,27 +1,25 @@
 
 <footer class="footer">
     <div class="ftrtop">
-        <a href="/"><img class="col-sm-2 mb-3" src="/images/logo/logo.png" alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
-        <div class="col-sm-8 mb-3">
+        <a href="/"><img class="col-sm-3 col-xs-8 mb-3" src="/images/logo/logo.png" alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
+        <div class="col-sm-6 col-xs-9 mb-3">
             <ul>
-                <li><a href="">dasdsad</a></li>
-                <li><a href="">dasdsad</a></li>
-                <li><a href="">dasdsad</a></li>
-                <li><a href="">dasdsad</a></li>
-                <li><a href="">dasdsad</a></li>
-                <li><a href="">dasdsad</a></li>
-                <li><a href="">dasdsad</a></li>
-                <li><a href="">dasdsad</a></li>
+                <li class="col-xs-4"><a href="">dasdsad</a></li>
+                <li class="col-xs-4"><a href="">dasdsad</a></li>
+                <li class="col-xs-4"><a href="">dasdsad</a></li>
+                <li class="col-xs-4"><a href="">dasdsad</a></li>
+                <li class="col-xs-4"><a href="">dasdsad</a></li>
+                <li class="col-xs-4"><a href="">dasdsad</a></li>
             </ul>
         </div>
-        <div class="col-sm-2 mb-3 social">
+        <div class="col-sm-3 col-xs-3 mb-3 social">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-google"></a>
             <a href="#" class="fa fa-linkedin"></a>
         </div>
     </div>
-    <div class="col-sm-12 mb-3 ftrbtm">
+    <div class="col-sm-12 col-xs-12 mb-3 ftrbtm">
         <p>© {{ "now"|date('Y') }} - Alle prijzen zijn inclusief BTW - Merknamen zijn alleen gebruikt om de toepasbaarheid van producten aan te geven en dienen verder niet te worden geassocieerd met {{ site_name }}</p>
     </div>
 </footer>
