--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -1,20 +1,20 @@
-<div class="row">
+<div class="row header">
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
         <span style="height:10px; display: block" aria-hidden="true">&nbsp;</span>
         <div class="push-left">
             {% if site_slug %}
-                <h4 class="slogan" style="height: 40px">{{ site_slug }}</h4>
+                <h4 class="slogan">{{ site_slug }}</h4>
             {% else %}
                 <div style="height: 39px;"></div>
             {% endif %}
-            <a href="/"><img style="max-height: 94px; max-width: 275px;"
+            <a href="/"><img class="col-xs-12 no-padding" style="max-height: 94px; max-width: 275px;"
                              src="/images/logo/logo.png"
                              alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
         </div>
     </div>
 
-    <div class="col-md-5">
+    <div class="col-md-5 hidden-xs">
         <form class="form-horizontal search-products" method="get"
               action="{{ lang.url.products }}">
 
@@ -43,14 +43,14 @@
         </form>
     </div>
 
-    <div class="col-md-4">
-        <div class="social">
+    <div class="col-md-4 col-xs-6">
+        <div class="social hidden-xs">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-google"></a>
             <a href="#" class="fa fa-linkedin"></a>
         </div>
-        <div class="push-right">
+        <div class="push-right header-nav">
             <!-- Pages menu -->
             {% include 'blocks/pages_menu.html.twig' %}
             <div class="float-clear"></div>
@@ -61,8 +61,8 @@
             </div>
         </div>
     </div>
-
 </div>
+<hr class="hidden-sm hidden-md hidden-lg">
 <!-- Main menu -->
 <div class="masthead">
     {% include 'blocks/main_menu.html.twig' %}
