--- a/templates/products.html.twig
+++ b/templates/products.html.twig
@@ -11,7 +11,7 @@
             <div class="panel-heading">
                 <h5 class="panel-title">Filter resultaten</h5>
             </div>
-            <div class="panel-body">
+            <div class="panel-body box-shadow">
                 <form action="{{ query_string }}" class="form-horizontal">
 
                     <div class="form-group">
@@ -80,11 +80,11 @@
         </form>
         {% for product in products %}
             <!-- PRODUCT OVERVIEW -->
-            <div class="row floating-box">
+            <div class="row floating-box round-border box-shadow">
                 <!-- PRODUCT IMAGE -->
                 <div class="col-md-3 center">
                     <img src="{{ product.images|length > 0 ? product.images[0].url : '/img/no_image.gif' }}"
-                         class="fill">
+                         class="fill round-border box-shadow">
                 </div>
 
                 <div class="col-md-7 color">
@@ -131,7 +131,7 @@
                 </div>
 
                 <!-- PRODUCT PRICE -->
-                <div class="col-md-2 price-box">
+                <div class="col-md-2 price-box round-border">
 
                     {% if product.price_details %}
                         <h3 class="price">
@@ -144,7 +144,7 @@
                             <small><em>Inclusief BTW</em></small>
                         </p>
                         <div>
-                            <a href="{{ lang.url.shopping_cart_add ~ product.id }}/1" class="btn btn btn-block btn-success order-link">
+                            <a href="{{ lang.url.shopping_cart_add ~ product.id }}/1" class="btn btn btn-block btn-success order-link box-shadow">
                                 In winkelwagen <span class="glyphicon glyphicon-shopping-cart"></span>
                             </a>
                         </div>
